Fix login auth